--- a/database/src/main/resources/application.yml
+++ b/database/src/main/resources/application.yml
@@ -3,6 +3,11 @@ spring:
     url: jdbc:mysql://localhost:3306/book?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: 1234
+  data:
+      neo4j:
+        uri: bolt://localhost:7687
+        username: neo4j
+        password: 1234
 
 #1.加载MyBatis配置文件
 mybatis:
